--- a/numeric.ipynb
+++ b/numeric.ipynb
@@ -10,8 +10,9 @@
    },
    "source": [
     "# Numerical Filtering\n",
+    "This notebook contains the numeric computations of (Zander et al 2020).\n",
     "We start with loading the necessary packages.\n",
-    "For the correctness of the transformation `T` see the \"Symbolic Notebook\". "
+    "For the correctness of the transformation `T` which maps Mueller matrices to its corresponding coherency matrices  see the \"Symbolic Notebook\". "
    ]
   },
   {
@@ -27,13 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "from py_pol import np, degrees\n",
-    "from py_pol.mueller import Mueller\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from numpy import linalg as LA\n",
-    "import scipy \n",
-    "np.set_printoptions(precision=4)"
+    "from numpy import linalg as LA"
    ]
   },
   {
@@ -97,7 +93,7 @@
    "source": [
     "We are now ready to setup the filter of the measured Mueller matrix.\n",
     "First the generic filter which filters the negative eigenvalues by setting them to zero.\n",
-    "This is the filter proposed in <cite data-cite=\"7801282/J65MQUL8\"></cite>."
+    "This is the filter proposed in *(Cloude 1990)*."
    ]
   },
   {
@@ -217,8 +213,8 @@
    },
    "source": [
     "Now take some measured Mueller matrices.\n",
-    "The matrices `M1`, `M2` and `M3` are the examples used in <cite data-cite=\"7801282/J65MQUL8\"></cite>.\n",
-    "The matrices `M4` and `M4filt` are the examples from <cite data-cite=\"7801282/PAZQAYHQ\"></cite>, where `M4filt` is filtered matrix which was obtained in the paper."
+    "The matrices `M1`, `M2` and `M3` are the examples used in *(Cloude 1990)*.\n",
+    "The matrices `M4` and `M4filt` are the examples from *(Aiello et al. 2006)*, where `M4filt` is filtered matrix which was obtained in the paper."
    ]
   },
   {
@@ -323,7 +319,12 @@
    },
    "source": [
     "## References\n",
-    "<div class=\"cite2c-biblio\"></div>"
+    "\n",
+    "Aiello, A, G Puentes, D Voigt, and JP Woerdman. 2006. “Maximum-Likelihood Estimation of Mueller Matrices.” Optics Letters 31 (6): 817–19.\n",
+    "\n",
+    "Cloude, Shane R. 1990. “Conditions For The Physical Realisability Of Matrix Operators In Polarimetry.” In Polarization Considerations for Optical Systems II, edited by Russell A. Chipman, 1166:177–87. SPIE. doi:10.1117/12.962889.\n",
+    "\n",
+    "Zander, T and J Beyerer. 2020. “The Mueller matrix cone and its application to filtering.” to appear\n"
    ]
   }
  ],
@@ -506,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   },
   "name": "foo.ipynb"
  },
