--- a/symbolic.ipynb
+++ b/symbolic.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "# Symbolic Filtering\n",
-    "This notebook contains the symbolic computations left out in (tba). First we load the necessary packages."
+    "This notebook contains the symbolic computations left out in *(Zander et al 2020)*. First we load the necessary packages."
    ]
   },
   {
@@ -41,7 +41,7 @@
    "source": [
     "## Isometry of the ambient space\n",
     "We now will define the transformation from the Mueller matrix space to the Hermitian matrix space.\n",
-    "This transformation is taken from Theorem A.1 of <cite data-cite=\"7801282/W6AVQID3\"></cite>.\n",
+    "This transformation is taken from Theorem A.1 of *(Van Der Mee 1993)*. \n",
     "We also compute the eigenvalues of this transformation."
    ]
   },
@@ -177,7 +177,7 @@
    },
    "source": [
     "The reader might find it very burdensome to check that\n",
-    "the matrix `T` actually gives the same linear map as the one given in Theorem A.1 of <cite data-cite=\"7801282/W6AVQID3\"></cite>.\n",
+    "the matrix `T` actually gives the same linear map as the one given in Theorem A.1 of *(Van Der Mee 1993)*.\n",
     "For that we define a symbolic Mueller matrix and apply our transformations\n",
     "to get some convient presentation of `T`."
    ]
@@ -195,17 +195,21 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⎡  m₁₁ + m₂₂ + m₃₃ + m₄₄    m₁₂ + m₂₁ - ⅈ⋅m₃₄ + ⅈ⋅m₄₃   m₁₃ - ⅈ⋅m₂₄ + m₃₁ + ⅈ⋅m₄₂   m₁₄ - ⅈ⋅m₂₃ + ⅈ⋅m₃₂ + m₄₁⎤\n",
-      "⎢                                                                                                            ⎥\n",
-      "⎢m₁₂ + m₂₁ + ⅈ⋅m₃₄ - ⅈ⋅m₄₃    m₁₁ + m₂₂ - m₃₃ - m₄₄     ⅈ⋅m₁₄ + m₂₃ + m₃₂ - ⅈ⋅m₄₁   ⅈ⋅m₁₃ + m₂₄ - ⅈ⋅m₃₁ + m₄₂⎥\n",
-      "⎢                                                                                                            ⎥\n",
-      "⎢m₁₃ + ⅈ⋅m₂₄ + m₃₁ - ⅈ⋅m₄₂  -ⅈ⋅m₁₄ + m₂₃ + m₃₂ + ⅈ⋅m₄₁    m₁₁ - m₂₂ + m₃₃ - m₄₄     ⅈ⋅m₁₂ - ⅈ⋅m₂₁ + m₃₄ + m₄₃⎥\n",
-      "⎢                                                                                                            ⎥\n",
-      "⎣m₁₄ + ⅈ⋅m₂₃ - ⅈ⋅m₃₂ + m₄₁  -ⅈ⋅m₁₃ + m₂₄ + ⅈ⋅m₃₁ + m₄₂  -ⅈ⋅m₁₂ + ⅈ⋅m₂₁ + m₃₄ + m₄₃    m₁₁ - m₂₂ - m₃₃ + m₄₄  ⎦\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}m_{11} + m_{22} + m_{33} + m_{44} & m_{12} + m_{21} - i m_{34} + i m_{43} & m_{13} - i m_{24} + m_{31} + i m_{42} & m_{14} - i m_{23} + i m_{32} + m_{41}\\\\m_{12} + m_{21} + i m_{34} - i m_{43} & m_{11} + m_{22} - m_{33} - m_{44} & i m_{14} + m_{23} + m_{32} - i m_{41} & i m_{13} + m_{24} - i m_{31} + m_{42}\\\\m_{13} + i m_{24} + m_{31} - i m_{42} & - i m_{14} + m_{23} + m_{32} + i m_{41} & m_{11} - m_{22} + m_{33} - m_{44} & i m_{12} - i m_{21} + m_{34} + m_{43}\\\\m_{14} + i m_{23} - i m_{32} + m_{41} & - i m_{13} + m_{24} + i m_{31} + m_{42} & - i m_{12} + i m_{21} + m_{34} + m_{43} & m_{11} - m_{22} - m_{33} + m_{44}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[    m11 + m22 + m33 + m44,  m12 + m21 - I*m34 + I*m43,  m13 - I*m24 + m31 + I*m42, m14 - I*m23 + I*m32 + m41],\n",
+       "[m12 + m21 + I*m34 - I*m43,      m11 + m22 - m33 - m44,  I*m14 + m23 + m32 - I*m41, I*m13 + m24 - I*m31 + m42],\n",
+       "[m13 + I*m24 + m31 - I*m42, -I*m14 + m23 + m32 + I*m41,      m11 - m22 + m33 - m44, I*m12 - I*m21 + m34 + m43],\n",
+       "[m14 + I*m23 - I*m32 + m41, -I*m13 + m24 + I*m31 + m42, -I*m12 + I*m21 + m34 + m43,     m11 - m22 - m33 + m44]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,7 +219,7 @@
     "          [m21, m22, m23, m24],\n",
     "          [m31, m32, m33, m34],\n",
     "          [m41, m42, m43, m44]])\n",
-    "pprint(T0(M), num_columns=200)"
+    "T0(M)"
    ]
   },
   {
@@ -231,17 +235,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⎡    h₁₁ + h₂₂ + h₃₃ + h₄₄      h₁₂ + h₂₁ - 1.0⋅ⅈ⋅h₃₄ + ⅈ⋅h₄₃   h₁₃ - 1.0⋅ⅈ⋅h₂₄ + h₃₁ + ⅈ⋅h₄₂   h₁₄ - 1.0⋅ⅈ⋅h₂₃ + ⅈ⋅h₃₂ + h₄₁⎤\n",
-      "⎢                                                                                                                            ⎥\n",
-      "⎢h₁₂ + h₂₁ + ⅈ⋅h₃₄ - 1.0⋅ⅈ⋅h₄₃  h₁₁ + h₂₂ - 1.0⋅h₃₃ - 1.0⋅h₄₄   ⅈ⋅h₁₄ + h₂₃ + h₃₂ - 1.0⋅ⅈ⋅h₄₁   ⅈ⋅h₁₃ + h₂₄ - 1.0⋅ⅈ⋅h₃₁ + h₄₂⎥\n",
-      "⎢                                                                                                                            ⎥\n",
-      "⎢h₁₃ + ⅈ⋅h₂₄ + h₃₁ - 1.0⋅ⅈ⋅h₄₂  -1.0⋅ⅈ⋅h₁₄ + h₂₃ + h₃₂ + ⅈ⋅h₄₁  h₁₁ - 1.0⋅h₂₂ + h₃₃ - 1.0⋅h₄₄   ⅈ⋅h₁₂ - 1.0⋅ⅈ⋅h₂₁ + h₃₄ + h₄₃⎥\n",
-      "⎢                                                                                                                            ⎥\n",
-      "⎣h₁₄ + ⅈ⋅h₂₃ - 1.0⋅ⅈ⋅h₃₂ + h₄₁  -1.0⋅ⅈ⋅h₁₃ + h₂₄ + ⅈ⋅h₃₁ + h₄₂  -1.0⋅ⅈ⋅h₁₂ + ⅈ⋅h₂₁ + h₃₄ + h₄₃  h₁₁ - 1.0⋅h₂₂ - 1.0⋅h₃₃ + h₄₄⎦\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}h_{11} + h_{22} + h_{33} + h_{44} & h_{12} + h_{21} - 1.0 i h_{34} + i h_{43} & h_{13} - 1.0 i h_{24} + h_{31} + i h_{42} & h_{14} - 1.0 i h_{23} + i h_{32} + h_{41}\\\\h_{12} + h_{21} + i h_{34} - 1.0 i h_{43} & h_{11} + h_{22} - 1.0 h_{33} - 1.0 h_{44} & i h_{14} + h_{23} + h_{32} - 1.0 i h_{41} & i h_{13} + h_{24} - 1.0 i h_{31} + h_{42}\\\\h_{13} + i h_{24} + h_{31} - 1.0 i h_{42} & - 1.0 i h_{14} + h_{23} + h_{32} + i h_{41} & h_{11} - 1.0 h_{22} + h_{33} - 1.0 h_{44} & i h_{12} - 1.0 i h_{21} + h_{34} + h_{43}\\\\h_{14} + i h_{23} - 1.0 i h_{32} + h_{41} & - 1.0 i h_{13} + h_{24} + i h_{31} + h_{42} & - 1.0 i h_{12} + i h_{21} + h_{34} + h_{43} & h_{11} - 1.0 h_{22} - 1.0 h_{33} + h_{44}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[        h11 + h22 + h33 + h44,  h12 + h21 - 1.0*I*h34 + I*h43,  h13 - 1.0*I*h24 + h31 + I*h42, h14 - 1.0*I*h23 + I*h32 + h41],\n",
+       "[h12 + h21 + I*h34 - 1.0*I*h43,  h11 + h22 - 1.0*h33 - 1.0*h44,  I*h14 + h23 + h32 - 1.0*I*h41, I*h13 + h24 - 1.0*I*h31 + h42],\n",
+       "[h13 + I*h24 + h31 - 1.0*I*h42, -1.0*I*h14 + h23 + h32 + I*h41,  h11 - 1.0*h22 + h33 - 1.0*h44, I*h12 - 1.0*I*h21 + h34 + h43],\n",
+       "[h14 + I*h23 - 1.0*I*h32 + h41, -1.0*I*h13 + h24 + I*h31 + h42, -1.0*I*h12 + I*h21 + h34 + h43, h11 - 1.0*h22 - 1.0*h33 + h44]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -249,7 +257,7 @@
     "          [h21, h22, h23, h24],\n",
     "          [h31, h32, h33, h34],\n",
     "          [h41, h42, h43, h44]])\n",
-    "pprint(invT0(H),num_columns=300)"
+    "invT0(H)"
    ]
   },
   {
@@ -263,7 +271,7 @@
    "source": [
     "## Geometry of the Mueller matrix cone\n",
     "These are the complimentary computation to the last section before the conclusions.\n",
-    "We start be setting up symbolic matrices which belong to the real manifold $C_{4k}$ with $1\\le k\\le 4$ in order to compute the map $F$ symbolically. "
+    "We start be setting up symbolic matrices which belong to the real manifold $C_{4k}$ with $1\\le k\\le 4$ in order to compute the map $F$ symbolically as both defined in *(Zander et al 2020)*. "
    ]
   },
   {
@@ -307,7 +315,7 @@
     }
    },
    "source": [
-    "We now compute the image under $F$ as defined in (tba 2020) of these matrices and check that the polynomial equations in the resulting symbolic Mueller matrix are homogenous. "
+    "We now compute the image under $F$ of these matrices and check that the polynomial equations in the resulting symbolic Mueller matrix are homogenous. "
    ]
   },
   {
@@ -441,7 +449,7 @@
     "For completeness we state a unique form of the element in the matrix $C_{44}/{U}(k)$. Also we state one which has at most finitely many representations namely the ones of $C_{4k}/{U}(k)$ for $k\\le 3$.\n",
     "Note that we have to assume that the elements `a0, a10, a20, a30` are strictly positive. \n",
     "To get the corresponding Mueller matrices in case of `L5` we just have to do same as above (see `M5`).\n",
-    "For the Matrices `L6, L7, L8` we need to conjugate $LL^{\\dagger}$ by a permutation matrix according to Lemma 1 of <cite data-cite=\"7801282/CKHEEILG\"></cite>.\n",
+    "For the Matrices `L6, L7, L8` we need to conjugate $LL^{\\dagger}$ by a permutation matrix according to Lemma 1 of *(Higham 1990)*.\n",
     "We leave this computation out for now. \n",
     "But we plan to do it soon, as conveniently\n",
     "in the oncoming [1.6 Release of Sympy](https://github.com/sympy/sympy/wiki/Release-Notes-for-1.6) the permutation matrices will be included natively."
@@ -458,7 +466,25 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0.5 a_{0}^{2} + 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} + 0.5 a_{18}^{2} + 0.5 a_{19}^{2} + 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} + 0.5 a_{26}^{2} + 0.5 a_{27}^{2} + 0.5 a_{28}^{2} + 0.5 a_{29}^{2} + 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2} & 1.0 a_{10} a_{8} + 1.0 a_{16} a_{18} + 1.0 a_{17} a_{19} + 1.0 a_{24} a_{26} + 1.0 a_{25} a_{27} + 1.0 a_{29} a_{30} & 1.0 a_{16} a_{20} + 1.0 a_{24} a_{28} + 1.0 a_{25} a_{29} + 1.0 a_{27} a_{30} & 1.0 a_{19} a_{20} + 1.0 a_{24} a_{30} - 1.0 a_{26} a_{29} + 1.0 a_{27} a_{28}\\\\1.0 a_{10} a_{8} + 1.0 a_{16} a_{18} + 1.0 a_{17} a_{19} + 1.0 a_{24} a_{26} + 1.0 a_{25} a_{27} - 1.0 a_{29} a_{30} & 0.5 a_{0}^{2} + 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} + 0.5 a_{18}^{2} + 0.5 a_{19}^{2} - 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} + 0.5 a_{26}^{2} + 0.5 a_{27}^{2} - 0.5 a_{28}^{2} - 0.5 a_{29}^{2} - 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2} & 1.0 a_{18} a_{20} - 1.0 a_{25} a_{30} + 1.0 a_{26} a_{28} + 1.0 a_{27} a_{29} & - 1.0 a_{17} a_{20} + 1.0 a_{24} a_{29} - 1.0 a_{25} a_{28} + 1.0 a_{26} a_{30}\\\\1.0 a_{16} a_{20} + 1.0 a_{24} a_{28} + 1.0 a_{25} a_{29} - 1.0 a_{27} a_{30} & 1.0 a_{18} a_{20} + 1.0 a_{25} a_{30} + 1.0 a_{26} a_{28} + 1.0 a_{27} a_{29} & 0.5 a_{0}^{2} - 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} - 0.5 a_{18}^{2} - 0.5 a_{19}^{2} + 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} - 0.5 a_{26}^{2} - 0.5 a_{27}^{2} + 0.5 a_{28}^{2} + 0.5 a_{29}^{2} - 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2} & - 1.0 a_{10} a_{9} + 1.0 a_{16} a_{19} - 1.0 a_{17} a_{18} + 1.0 a_{24} a_{27} - 1.0 a_{25} a_{26} + 1.0 a_{28} a_{30}\\\\- 1.0 a_{19} a_{20} + 1.0 a_{24} a_{30} + 1.0 a_{26} a_{29} - 1.0 a_{27} a_{28} & 1.0 a_{17} a_{20} - 1.0 a_{24} a_{29} + 1.0 a_{25} a_{28} + 1.0 a_{26} a_{30} & 1.0 a_{10} a_{9} - 1.0 a_{16} a_{19} + 1.0 a_{17} a_{18} - 1.0 a_{24} a_{27} + 1.0 a_{25} a_{26} + 1.0 a_{28} a_{30} & 0.5 a_{0}^{2} - 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} - 0.5 a_{18}^{2} - 0.5 a_{19}^{2} - 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} - 0.5 a_{26}^{2} - 0.5 a_{27}^{2} - 0.5 a_{28}^{2} - 0.5 a_{29}^{2} + 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[0.5*a0**2 + 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 + 0.5*a18**2 + 0.5*a19**2 + 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 + 0.5*a26**2 + 0.5*a27**2 + 0.5*a28**2 + 0.5*a29**2 + 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2,                                                                                                                           1.0*a10*a8 + 1.0*a16*a18 + 1.0*a17*a19 + 1.0*a24*a26 + 1.0*a25*a27 + 1.0*a29*a30,                                                                                                                                                      1.0*a16*a20 + 1.0*a24*a28 + 1.0*a25*a29 + 1.0*a27*a30,                                                                                                                                                      1.0*a19*a20 + 1.0*a24*a30 - 1.0*a26*a29 + 1.0*a27*a28],\n",
+       "[                                                                                                                          1.0*a10*a8 + 1.0*a16*a18 + 1.0*a17*a19 + 1.0*a24*a26 + 1.0*a25*a27 - 1.0*a29*a30, 0.5*a0**2 + 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 + 0.5*a18**2 + 0.5*a19**2 - 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 + 0.5*a26**2 + 0.5*a27**2 - 0.5*a28**2 - 0.5*a29**2 - 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2,                                                                                                                                                      1.0*a18*a20 - 1.0*a25*a30 + 1.0*a26*a28 + 1.0*a27*a29,                                                                                                                                                     -1.0*a17*a20 + 1.0*a24*a29 - 1.0*a25*a28 + 1.0*a26*a30],\n",
+       "[                                                                                                                                                     1.0*a16*a20 + 1.0*a24*a28 + 1.0*a25*a29 - 1.0*a27*a30,                                                                                                                                                      1.0*a18*a20 + 1.0*a25*a30 + 1.0*a26*a28 + 1.0*a27*a29, 0.5*a0**2 - 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 - 0.5*a18**2 - 0.5*a19**2 + 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 - 0.5*a26**2 - 0.5*a27**2 + 0.5*a28**2 + 0.5*a29**2 - 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2,                                                                                                                          -1.0*a10*a9 + 1.0*a16*a19 - 1.0*a17*a18 + 1.0*a24*a27 - 1.0*a25*a26 + 1.0*a28*a30],\n",
+       "[                                                                                                                                                    -1.0*a19*a20 + 1.0*a24*a30 + 1.0*a26*a29 - 1.0*a27*a28,                                                                                                                                                      1.0*a17*a20 - 1.0*a24*a29 + 1.0*a25*a28 + 1.0*a26*a30,                                                                                                                           1.0*a10*a9 - 1.0*a16*a19 + 1.0*a17*a18 - 1.0*a24*a27 + 1.0*a25*a26 + 1.0*a28*a30, 0.5*a0**2 - 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 - 0.5*a18**2 - 0.5*a19**2 - 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 - 0.5*a26**2 - 0.5*a27**2 - 0.5*a28**2 - 0.5*a29**2 + 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "L5= Matrix([[a0 ,0,0,0],\n",
     "            [a8+I*a9, a10,0,0],\n",
@@ -470,7 +496,8 @@
     "L7= Matrix([[a16+ I*a17,a18+ I*a19,a20,0],\n",
     "            [a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
     "L8= Matrix([[a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
-    "M5=expand(invT(L1*Dagger(L1)))"
+    "M5=expand(invT(L5*Dagger(L5)))\n",
+    "M5"
    ]
   },
   {
@@ -478,7 +505,12 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "<div class=\"cite2c-biblio\"></div>"
+    "\n",
+    "Higham, Nicholas J. 1990. “Analysis of the Cholesky Decomposition of a Semi-Definite Matrix.” In Reliable Numerical Computation, 161–85. Oxford Sci. Publ. Oxford Univ. Press, New York.\n",
+    "\n",
+    "Van Der Mee, CVM. 1993. “An Eigenvalue Criterion for Matrices Transforming Stokes Parameters.” Journal of Mathematical Physics 34 (11): 5072–88.\n",
+    "\n",
+    "Zander, T and J Beyerer. 2020. “The Mueller matrix cone and its application to filtering.” to appear"
    ]
   }
  ],
@@ -599,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   },
   "name": "Calculations.ipynb"
  },
