Fixed some code bugs in the filter and started to implement the permutation matrices.

--- a/numeric.ipynb
+++ b/numeric.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "# Numerical Filtering\n",
-    "This notebook contains the numeric computations of (Zander et al 2020).\n",
+    "This notebook contains the numeric computations and the implementatiosn of the Mueller filters of (Zander et al 2020).\n",
     "We start with loading the necessary packages.\n",
     "For the correctness of the transformation `T` which maps Mueller matrices to its corresponding coherency matrices  see the \"Symbolic Notebook\". "
    ]
@@ -163,9 +163,9 @@
     }
    },
    "source": [
-    "Now we want to the preserve the upper left entry of the measured Mueller matrix,\n",
+    "Now we want to the preserve the upper left entry $M_{00}$ of a measured Mueller matrix $M$ after filterning,\n",
     "e.g. the change in intensity of an unpolarised beam is believed to be measured correctly.\n",
-    "For this we need to preserve the value of the sum of all eigenvalues of the coherency matrix. "
+    "For this it is enough to preserve the value of the sum of all eigenvalues of the coherency matrix. We also plan to implement this filter in a way, such that for any given value $c$ we can set the filter to produce the nearest Mueller matrix with $M_{00}=c$. "
    ]
   },
   {
@@ -182,21 +182,20 @@
    "outputs": [],
    "source": [
     "def GenericM00eigenFilter(y):\n",
-    "    neg_e=np.clip(y,None,0)\n",
-    "    neg_e=neg_e[neg_e != 0]\n",
+    "    neg_e=y[y <= 0]\n",
     "    d=0\n",
     "    d=np.sum(neg_e)/(4-np.size(neg_e))\n",
-    "    e=y+d\n",
-    "    D=np.clip(e,0,None)\n",
+    "    y=np.clip(y,0,None)\n",
+    "    y[y != 0]=y[y != 0]+d\n",
     "    # check for newly produced negative\n",
     "    # eigenvalues and filter again if necessary\n",
-    "    neg_D=np.clip(D,None,0)\n",
-    "    s=np.size((neg_D[neg_D != 0]))\n",
+    "    neg_y=np.clip(y,None,0)\n",
+    "    s=np.size((neg_y[neg_y != 0]))\n",
     "    if (s != 0):\n",
-    "        D=GenericM00eigenFilter(D)\n",
+    "        y=GenericM00eigenFilter(y)\n",
     "    # done\n",
-    "    return D \n",
-    "def GenericM00Filter(x):\n",
+    "    return y \n",
+    "def GenericZfilter(x):\n",
     "    e,v =LA.eigh(T(x))\n",
     "    D=GenericM00eigenFilter(e)\n",
     "    D=np.diag(D)\n",
@@ -249,7 +248,7 @@
     "M4filt=np.array([[0.7599, 0.0257, 0.1206, -0.0576],\n",
     "                 [0.0372, 0.5285, 0.0001, -0.0496],\n",
     "                 [0.1208, -0.0001, 0.6184, 0.1920],\n",
-    "                 [-0.0554, -0.0572, -0.1794, 0.4822]])\n"
+    "                 [-0.0554, -0.0572, -0.1794, 0.4822]])"
    ]
   },
   {
@@ -284,27 +283,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7993079350944633\n",
-      "0.8134560037320727\n",
+      "0.8601209863914067\n",
+      "0.8961499066562765\n",
       "0.9232534431378447\n",
       "0.9110202764866306\n",
-      "0.9264795025656261\n"
+      "0.9264795025656261\n",
+      "[[ 0.997       0.00340004 -0.00720393  0.00827384]\n",
+      " [ 0.00128542  0.96681889 -0.01724335  0.01136879]\n",
+      " [ 0.04737567  0.03025474  0.14399661 -0.97246578]\n",
+      " [ 0.03984697  0.02652134  0.96374819  0.17157183]]\n",
+      "[[ 0.8488     -0.04939662  0.02736674  0.0606842 ]\n",
+      " [-0.04939662  0.80377171  0.03584098 -0.03015221]\n",
+      " [ 0.02736674  0.03584098  0.77845166 -0.01939577]\n",
+      " [ 0.0606842  -0.03015221 -0.01939577  0.76952802]]\n",
+      "[[ 0.8886     -0.01507501  0.00394991  0.07736545]\n",
+      " [-0.01399667  0.61205675 -0.11515513 -0.09260091]\n",
+      " [ 0.00298897 -0.11399846  0.62181666  0.05834267]\n",
+      " [ 0.07723833 -0.09285789  0.05711989  0.64482085]]\n",
+      "[[ 0.7599      0.02729742  0.11326012 -0.05396825]\n",
+      " [ 0.04591394  0.52869671  0.00502863 -0.0743151 ]\n",
+      " [ 0.12723247 -0.00252733  0.56564671  0.19425018]\n",
+      " [-0.05819589 -0.08607419 -0.1796437   0.48118747]]\n"
      ]
     }
    ],
    "source": [
-    "print(LA.norm(GenericM00Filter(M1)-M1)/LA.norm(GenericFilter(M1)/GenericFilter(M1)[0,0]*M1[0,0]-M1))\n",
-    "print(LA.norm(GenericM00Filter(M2)-M2)/LA.norm(GenericFilter(M2)/GenericFilter(M2)[0,0]*M2[0,0]-M2))\n",
-    "print(LA.norm(GenericM00Filter(M3)-M3)/LA.norm(GenericFilter(M3)/GenericFilter(M3)[0,0]*M3[0,0]-M3))\n",
-    "print(LA.norm(GenericM00Filter(M4)-M4)/LA.norm(GenericFilter(M4)/GenericFilter(M4)[0,0]*M4[0,0]-M4))\n",
-    "print(LA.norm(GenericM00Filter(M4)-M4)/LA.norm(M4filt-M4))"
+    "print(LA.norm(GenericZfilter(M1)-M1)/LA.norm(GenericFilter(M1)/GenericFilter(M1)[0,0]*M1[0,0]-M1))\n",
+    "print(LA.norm(GenericZfilter(M2)-M2)/LA.norm(GenericFilter(M2)/GenericFilter(M2)[0,0]*M2[0,0]-M2))\n",
+    "print(LA.norm(GenericZfilter(M3)-M3)/LA.norm(GenericFilter(M3)/GenericFilter(M3)[0,0]*M3[0,0]-M3))\n",
+    "print(LA.norm(GenericZfilter(M4)-M4)/LA.norm(GenericFilter(M4)/GenericFilter(M4)[0,0]*M4[0,0]-M4))\n",
+    "print(LA.norm(GenericZfilter(M4)-M4)/LA.norm(M4filt-M4))\n",
+    "print(GenericZfilter(M1))\n",
+    "print(GenericZfilter(M2))\n",
+    "print(GenericZfilter(M3))\n",
+    "print(GenericZfilter(M4))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hence in this case the optimal filtering in our examples get us 7 to 20 percent improvements. "
+    "Hence in this case the optimal filtering in our examples get us 7 to 14 percent improvements. "
    ]
   },
   {
