--- a/symbolic.ipynb
+++ b/symbolic.ipynb
@@ -27,7 +27,10 @@
    "outputs": [],
    "source": [
     "from sympy import *\n",
-    "from sympy.physics.quantum.dagger import Dagger"
+    "from sympy.physics.quantum.dagger import Dagger\n",
+    "#from sympy.matrices import Matrix, PermutationMatrix\n",
+    "#from sympy.combinatorics import Permutation\n",
+    "#import itertools"
    ]
   },
   {
@@ -466,38 +469,30 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0.5 a_{0}^{2} + 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} + 0.5 a_{18}^{2} + 0.5 a_{19}^{2} + 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} + 0.5 a_{26}^{2} + 0.5 a_{27}^{2} + 0.5 a_{28}^{2} + 0.5 a_{29}^{2} + 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2} & 1.0 a_{10} a_{8} + 1.0 a_{16} a_{18} + 1.0 a_{17} a_{19} + 1.0 a_{24} a_{26} + 1.0 a_{25} a_{27} + 1.0 a_{29} a_{30} & 1.0 a_{16} a_{20} + 1.0 a_{24} a_{28} + 1.0 a_{25} a_{29} + 1.0 a_{27} a_{30} & 1.0 a_{19} a_{20} + 1.0 a_{24} a_{30} - 1.0 a_{26} a_{29} + 1.0 a_{27} a_{28}\\\\1.0 a_{10} a_{8} + 1.0 a_{16} a_{18} + 1.0 a_{17} a_{19} + 1.0 a_{24} a_{26} + 1.0 a_{25} a_{27} - 1.0 a_{29} a_{30} & 0.5 a_{0}^{2} + 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} + 0.5 a_{18}^{2} + 0.5 a_{19}^{2} - 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} + 0.5 a_{26}^{2} + 0.5 a_{27}^{2} - 0.5 a_{28}^{2} - 0.5 a_{29}^{2} - 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2} & 1.0 a_{18} a_{20} - 1.0 a_{25} a_{30} + 1.0 a_{26} a_{28} + 1.0 a_{27} a_{29} & - 1.0 a_{17} a_{20} + 1.0 a_{24} a_{29} - 1.0 a_{25} a_{28} + 1.0 a_{26} a_{30}\\\\1.0 a_{16} a_{20} + 1.0 a_{24} a_{28} + 1.0 a_{25} a_{29} - 1.0 a_{27} a_{30} & 1.0 a_{18} a_{20} + 1.0 a_{25} a_{30} + 1.0 a_{26} a_{28} + 1.0 a_{27} a_{29} & 0.5 a_{0}^{2} - 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} - 0.5 a_{18}^{2} - 0.5 a_{19}^{2} + 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} - 0.5 a_{26}^{2} - 0.5 a_{27}^{2} + 0.5 a_{28}^{2} + 0.5 a_{29}^{2} - 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2} & - 1.0 a_{10} a_{9} + 1.0 a_{16} a_{19} - 1.0 a_{17} a_{18} + 1.0 a_{24} a_{27} - 1.0 a_{25} a_{26} + 1.0 a_{28} a_{30}\\\\- 1.0 a_{19} a_{20} + 1.0 a_{24} a_{30} + 1.0 a_{26} a_{29} - 1.0 a_{27} a_{28} & 1.0 a_{17} a_{20} - 1.0 a_{24} a_{29} + 1.0 a_{25} a_{28} + 1.0 a_{26} a_{30} & 1.0 a_{10} a_{9} - 1.0 a_{16} a_{19} + 1.0 a_{17} a_{18} - 1.0 a_{24} a_{27} + 1.0 a_{25} a_{26} + 1.0 a_{28} a_{30} & 0.5 a_{0}^{2} - 0.5 a_{10}^{2} + 0.5 a_{16}^{2} + 0.5 a_{17}^{2} - 0.5 a_{18}^{2} - 0.5 a_{19}^{2} - 0.5 a_{20}^{2} + 0.5 a_{24}^{2} + 0.5 a_{25}^{2} - 0.5 a_{26}^{2} - 0.5 a_{27}^{2} - 0.5 a_{28}^{2} - 0.5 a_{29}^{2} + 0.5 a_{30}^{2} + 0.5 a_{8}^{2} + 0.5 a_{9}^{2}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[0.5*a0**2 + 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 + 0.5*a18**2 + 0.5*a19**2 + 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 + 0.5*a26**2 + 0.5*a27**2 + 0.5*a28**2 + 0.5*a29**2 + 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2,                                                                                                                           1.0*a10*a8 + 1.0*a16*a18 + 1.0*a17*a19 + 1.0*a24*a26 + 1.0*a25*a27 + 1.0*a29*a30,                                                                                                                                                      1.0*a16*a20 + 1.0*a24*a28 + 1.0*a25*a29 + 1.0*a27*a30,                                                                                                                                                      1.0*a19*a20 + 1.0*a24*a30 - 1.0*a26*a29 + 1.0*a27*a28],\n",
-       "[                                                                                                                          1.0*a10*a8 + 1.0*a16*a18 + 1.0*a17*a19 + 1.0*a24*a26 + 1.0*a25*a27 - 1.0*a29*a30, 0.5*a0**2 + 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 + 0.5*a18**2 + 0.5*a19**2 - 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 + 0.5*a26**2 + 0.5*a27**2 - 0.5*a28**2 - 0.5*a29**2 - 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2,                                                                                                                                                      1.0*a18*a20 - 1.0*a25*a30 + 1.0*a26*a28 + 1.0*a27*a29,                                                                                                                                                     -1.0*a17*a20 + 1.0*a24*a29 - 1.0*a25*a28 + 1.0*a26*a30],\n",
-       "[                                                                                                                                                     1.0*a16*a20 + 1.0*a24*a28 + 1.0*a25*a29 - 1.0*a27*a30,                                                                                                                                                      1.0*a18*a20 + 1.0*a25*a30 + 1.0*a26*a28 + 1.0*a27*a29, 0.5*a0**2 - 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 - 0.5*a18**2 - 0.5*a19**2 + 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 - 0.5*a26**2 - 0.5*a27**2 + 0.5*a28**2 + 0.5*a29**2 - 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2,                                                                                                                          -1.0*a10*a9 + 1.0*a16*a19 - 1.0*a17*a18 + 1.0*a24*a27 - 1.0*a25*a26 + 1.0*a28*a30],\n",
-       "[                                                                                                                                                    -1.0*a19*a20 + 1.0*a24*a30 + 1.0*a26*a29 - 1.0*a27*a28,                                                                                                                                                      1.0*a17*a20 - 1.0*a24*a29 + 1.0*a25*a28 + 1.0*a26*a30,                                                                                                                           1.0*a10*a9 - 1.0*a16*a19 + 1.0*a17*a18 - 1.0*a24*a27 + 1.0*a25*a26 + 1.0*a28*a30, 0.5*a0**2 - 0.5*a10**2 + 0.5*a16**2 + 0.5*a17**2 - 0.5*a18**2 - 0.5*a19**2 - 0.5*a20**2 + 0.5*a24**2 + 0.5*a25**2 - 0.5*a26**2 - 0.5*a27**2 - 0.5*a28**2 - 0.5*a29**2 + 0.5*a30**2 + 0.5*a8**2 + 0.5*a9**2]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "L5= Matrix([[a0 ,0,0,0],\n",
     "            [a8+I*a9, a10,0,0],\n",
     "            [a16+ I*a17,a18+ I*a19,a20,0],\n",
     "            [a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
-    "L6= Matrix([[a8+I*a9, a10,0,0],\n",
+    "L6= Matrix([[0,0,0,0],\n",
+    "            [a8+I*a9, a10,0,0],\n",
     "            [a16+ I*a17,a18+ I*a19,a20,0],\n",
     "            [a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
-    "L7= Matrix([[a16+ I*a17,a18+ I*a19,a20,0],\n",
+    "L7= Matrix([[0,0,0,0],\n",
+    "            [0,0,0,0],\n",
+    "            [a16+ I*a17,a18+ I*a19,a20,0],\n",
     "            [a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
-    "L8= Matrix([[a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
+    "L8= Matrix([[0,0,0,0],\n",
+    "            [0,0,0,0],\n",
+    "            [0,0,0,0],\n",
+    "            [a24+ I*a25,a26+ I*a27,a28+ I*a29,a30]]).T\n",
     "M5=expand(invT(L5*Dagger(L5)))\n",
-    "M5"
+    "#def ListPermuationMatrices(x):\n",
+    "#    y=map(lambda x: PermutationMatrix(Permutation(x)),\n",
+    "#            list(itertools.permutations(list(range(x)))))\n",
+    "#    return [z.as_explicit() for z in y]\n",
+    "#M6=[expand(invT(x*L6*Dagger(L6)*x.T)) for x in ListPermuationMatrices(4)]"
    ]
   },
   {
@@ -512,6 +507,13 @@
     "\n",
     "Zander, T and J Beyerer. 2020. “The Mueller matrix cone and its application to filtering.” to appear"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
