--- a/numeric.ipynb
+++ b/numeric.ipynb
@@ -60,13 +60,13 @@
     "I=1.j\n",
     "Tn=1/2*np.array([[1,  0,  0,  0,    0,  1,  0,  0,    0,  0,  1,  0,     0,  0,  0,  1],# first row\n",
     "                 [0,  1,  0,  0,    1,  0,  0,  0,    0,  0,  0, -I,     0,  0,  I,  0],\n",
-    "                 [0,  0,  1,  0,    0,  0,  0, -I,    1,  0,  0,  0,     0,  I,  0,  0],\n",
+    "                 [0,  0,  1,  0,    0,  0,  0, I,    1,  0,  0,  0,     0,  -I,  0,  0],\n",
     "                 [0,  0,  0,  1,    0,  0, -I,  0,    0,  I,  0,  0,     1,  0,  0,  0],\n",
     "                 [0,  1,  0,  0,    1,  0,  0,  0,    0,  0,  0,  I,     0,  0, -I,  0],# second row\n",
     "                 [1,  0,  0,  0,    0,  1,  0,  0,    0,  0, -1,  0,     0,  0,  0, -1],\n",
     "                 [0,  0,  0,  I,    0,  0,  1,  0,    0,  1,  0,  0,    -I,  0,  0,  0],\n",
     "                 [0,  0,  I,  0,    0,  0,  0,  1,   -I,  0,  0,  0,     0,  1,  0,  0],\n",
-    "                 [0,  0,  1,  0,    0,  0,  0,  I,    1,  0,  0,  0,     0, -I,  0,  0],# third row\n",
+    "                 [0,  0,  1,  0,    0,  0,  0,  -I,    1,  0,  0,  0,     0, I,  0,  0],# third row\n",
     "                 [0,  0,  0, -I,    0,  0,  1,  0,    0,  1,  0,  0,     I,  0,  0,  0],\n",
     "                 [1,  0,  0,  0,    0, -1,  0,  0,    0,  0,  1,  0,     0,  0,  0, -1],\n",
     "                 [0,  I,  0,  0,   -I,  0,  0,  0,    0,  0,  0,  1,     0,  0,  1,  0],\n",
@@ -283,11 +283,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8601209863914067\n",
-      "0.8961499066562765\n",
-      "0.9232534431378447\n",
-      "0.9110202764866306\n",
-      "0.9264795025656261\n",
+      "0.8601209863914068\n",
+      "0.896149906656278\n",
+      "0.923253443137845\n",
+      "0.9110202764866298\n",
+      "0.9264795025656251\n",
       "[[ 0.997       0.00340004 -0.00720393  0.00827384]\n",
       " [ 0.00128542  0.96681889 -0.01724335  0.01136879]\n",
       " [ 0.04737567  0.03025474  0.14399661 -0.97246578]\n",
@@ -526,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   },
   "name": "foo.ipynb"
  },
