--- a/symbolic.ipynb
+++ b/symbolic.ipynb
@@ -63,7 +63,22 @@
     {
      "data": {
       "text/plain": [
-       "{-1: 4, 1: 12}"
+       "{2.27681110432308e-64 - 1.0*I: 1,\n",
+       " 2.28106141364163e-64 + 1.0*I: 1,\n",
+       " -1.0 - 1.74248350929473e-66*I: 1,\n",
+       " -1.0 + 1.29526354172069e-67*I: 1,\n",
+       " -1.00000000000000: 1,\n",
+       " 1.0 - 2.59055960378824e-65*I: 1,\n",
+       " 1.0 - 1.76463675822631e-65*I: 1,\n",
+       " 1.0 - 7.05024075375862e-65*I: 1,\n",
+       " 1.0 + 1.51572411110342e-64*I: 1,\n",
+       " 1.0 + 1.77251496337077e-65*I: 1,\n",
+       " 1.0 + 2.59040055766941e-64*I: 1,\n",
+       " 1.0 + 6.75358757001636e-65*I: 1,\n",
+       " 1.0 - 4.07661930536338e-64*I: 1,\n",
+       " 1.0 - 6.32755730257852e-65*I: 1,\n",
+       " 1.0 + 6.79447449556865e-65*I: 1,\n",
+       " 1.0 - 9.40836242257732e-66*I: 1}"
       ]
      },
      "execution_count": 2,
@@ -74,13 +89,13 @@
    "source": [
     "Ttr = Matrix([[1,  0,  0,  0,    0,  1,  0,  0,    0,  0,  1,  0,     0,  0,  0,  1],# first row\n",
     "              [0,  1,  0,  0,    1,  0,  0,  0,    0,  0,  0, -I,     0,  0,  I,  0],\n",
-    "              [0,  0,  1,  0,    0,  0,  0, -I,    1,  0,  0,  0,     0,  I,  0,  0],\n",
+    "              [0,  0,  1,  0,    0,  0,  0, I,    1,  0,  0,  0,     0,  -I,  0,  0],\n",
     "              [0,  0,  0,  1,    0,  0, -I,  0,    0,  I,  0,  0,     1,  0,  0,  0],\n",
     "              [0,  1,  0,  0,    1,  0,  0,  0,    0,  0,  0,  I,     0,  0, -I,  0],# second row\n",
     "              [1,  0,  0,  0,    0,  1,  0,  0,    0,  0, -1,  0,     0,  0,  0, -1],\n",
     "              [0,  0,  0,  I,    0,  0,  1,  0,    0,  1,  0,  0,    -I,  0,  0,  0],\n",
     "              [0,  0,  I,  0,    0,  0,  0,  1,   -I,  0,  0,  0,     0,  1,  0,  0],\n",
-    "              [0,  0,  1,  0,    0,  0,  0,  I,    1,  0,  0,  0,     0, -I,  0,  0],# third row\n",
+    "              [0,  0,  1,  0,    0,  0,  0,  -I,    1,  0,  0,  0,     0, I,  0,  0],# third row\n",
     "              [0,  0,  0, -I,    0,  0,  1,  0,    0,  1,  0,  0,     I,  0,  0,  0],\n",
     "              [1,  0,  0,  0,    0, -1,  0,  0,    0,  0,  1,  0,     0,  0,  0, -1],\n",
     "              [0,  I,  0,  0,   -I,  0,  0,  0,    0,  0,  0,  1,     0,  0,  1,  0],\n",
@@ -200,13 +215,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}m_{11} + m_{22} + m_{33} + m_{44} & m_{12} + m_{21} - i m_{34} + i m_{43} & m_{13} - i m_{24} + m_{31} + i m_{42} & m_{14} - i m_{23} + i m_{32} + m_{41}\\\\m_{12} + m_{21} + i m_{34} - i m_{43} & m_{11} + m_{22} - m_{33} - m_{44} & i m_{14} + m_{23} + m_{32} - i m_{41} & i m_{13} + m_{24} - i m_{31} + m_{42}\\\\m_{13} + i m_{24} + m_{31} - i m_{42} & - i m_{14} + m_{23} + m_{32} + i m_{41} & m_{11} - m_{22} + m_{33} - m_{44} & i m_{12} - i m_{21} + m_{34} + m_{43}\\\\m_{14} + i m_{23} - i m_{32} + m_{41} & - i m_{13} + m_{24} + i m_{31} + m_{42} & - i m_{12} + i m_{21} + m_{34} + m_{43} & m_{11} - m_{22} - m_{33} + m_{44}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}m_{11} + m_{22} + m_{33} + m_{44} & m_{12} + m_{21} - i m_{34} + i m_{43} & m_{13} + i m_{24} + m_{31} - i m_{42} & m_{14} - i m_{23} + i m_{32} + m_{41}\\\\m_{12} + m_{21} + i m_{34} - i m_{43} & m_{11} + m_{22} - m_{33} - m_{44} & i m_{14} + m_{23} + m_{32} - i m_{41} & i m_{13} + m_{24} - i m_{31} + m_{42}\\\\m_{13} - i m_{24} + m_{31} + i m_{42} & - i m_{14} + m_{23} + m_{32} + i m_{41} & m_{11} - m_{22} + m_{33} - m_{44} & i m_{12} - i m_{21} + m_{34} + m_{43}\\\\m_{14} + i m_{23} - i m_{32} + m_{41} & - i m_{13} + m_{24} + i m_{31} + m_{42} & - i m_{12} + i m_{21} + m_{34} + m_{43} & m_{11} - m_{22} - m_{33} + m_{44}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[    m11 + m22 + m33 + m44,  m12 + m21 - I*m34 + I*m43,  m13 - I*m24 + m31 + I*m42, m14 - I*m23 + I*m32 + m41],\n",
+       "[    m11 + m22 + m33 + m44,  m12 + m21 - I*m34 + I*m43,  m13 + I*m24 + m31 - I*m42, m14 - I*m23 + I*m32 + m41],\n",
        "[m12 + m21 + I*m34 - I*m43,      m11 + m22 - m33 - m44,  I*m14 + m23 + m32 - I*m41, I*m13 + m24 - I*m31 + m42],\n",
-       "[m13 + I*m24 + m31 - I*m42, -I*m14 + m23 + m32 + I*m41,      m11 - m22 + m33 - m44, I*m12 - I*m21 + m34 + m43],\n",
+       "[m13 - I*m24 + m31 + I*m42, -I*m14 + m23 + m32 + I*m41,      m11 - m22 + m33 - m44, I*m12 - I*m21 + m34 + m43],\n",
        "[m14 + I*m23 - I*m32 + m41, -I*m13 + m24 + I*m31 + m42, -I*m12 + I*m21 + m34 + m43,     m11 - m22 - m33 + m44]])"
       ]
      },
@@ -240,14 +255,14 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}h_{11} + h_{22} + h_{33} + h_{44} & h_{12} + h_{21} - 1.0 i h_{34} + i h_{43} & h_{13} - 1.0 i h_{24} + h_{31} + i h_{42} & h_{14} - 1.0 i h_{23} + i h_{32} + h_{41}\\\\h_{12} + h_{21} + i h_{34} - 1.0 i h_{43} & h_{11} + h_{22} - 1.0 h_{33} - 1.0 h_{44} & i h_{14} + h_{23} + h_{32} - 1.0 i h_{41} & i h_{13} + h_{24} - 1.0 i h_{31} + h_{42}\\\\h_{13} + i h_{24} + h_{31} - 1.0 i h_{42} & - 1.0 i h_{14} + h_{23} + h_{32} + i h_{41} & h_{11} - 1.0 h_{22} + h_{33} - 1.0 h_{44} & i h_{12} - 1.0 i h_{21} + h_{34} + h_{43}\\\\h_{14} + i h_{23} - 1.0 i h_{32} + h_{41} & - 1.0 i h_{13} + h_{24} + i h_{31} + h_{42} & - 1.0 i h_{12} + i h_{21} + h_{34} + h_{43} & h_{11} - 1.0 h_{22} - 1.0 h_{33} + h_{44}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}h_{11} + h_{22} + h_{33} + h_{44} & h_{12} + h_{21} - 1.0 i h_{34} + i h_{43} & h_{13} - 1.0 i h_{24} + h_{31} + i h_{42} & h_{14} - 1.0 i h_{23} + i h_{32} + h_{41}\\\\h_{12} + h_{21} + i h_{34} - 1.0 i h_{43} & h_{11} + h_{22} - 1.0 h_{33} - 1.0 h_{44} & i h_{14} + h_{23} + h_{32} - 1.0 i h_{41} & - 1.0 i h_{13} + h_{24} + i h_{31} + h_{42}\\\\h_{13} + i h_{24} + h_{31} - 1.0 i h_{42} & - 1.0 i h_{14} + h_{23} + h_{32} + i h_{41} & h_{11} - 1.0 h_{22} + h_{33} - 1.0 h_{44} & i h_{12} - 1.0 i h_{21} + h_{34} + h_{43}\\\\h_{14} + i h_{23} - 1.0 i h_{32} + h_{41} & i h_{13} + h_{24} - 1.0 i h_{31} + h_{42} & - 1.0 i h_{12} + i h_{21} + h_{34} + h_{43} & h_{11} - 1.0 h_{22} - 1.0 h_{33} + h_{44}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[        h11 + h22 + h33 + h44,  h12 + h21 - 1.0*I*h34 + I*h43,  h13 - 1.0*I*h24 + h31 + I*h42, h14 - 1.0*I*h23 + I*h32 + h41],\n",
-       "[h12 + h21 + I*h34 - 1.0*I*h43,  h11 + h22 - 1.0*h33 - 1.0*h44,  I*h14 + h23 + h32 - 1.0*I*h41, I*h13 + h24 - 1.0*I*h31 + h42],\n",
-       "[h13 + I*h24 + h31 - 1.0*I*h42, -1.0*I*h14 + h23 + h32 + I*h41,  h11 - 1.0*h22 + h33 - 1.0*h44, I*h12 - 1.0*I*h21 + h34 + h43],\n",
-       "[h14 + I*h23 - 1.0*I*h32 + h41, -1.0*I*h13 + h24 + I*h31 + h42, -1.0*I*h12 + I*h21 + h34 + h43, h11 - 1.0*h22 - 1.0*h33 + h44]])"
+       "[        h11 + h22 + h33 + h44,  h12 + h21 - 1.0*I*h34 + I*h43,  h13 - 1.0*I*h24 + h31 + I*h42,  h14 - 1.0*I*h23 + I*h32 + h41],\n",
+       "[h12 + h21 + I*h34 - 1.0*I*h43,  h11 + h22 - 1.0*h33 - 1.0*h44,  I*h14 + h23 + h32 - 1.0*I*h41, -1.0*I*h13 + h24 + I*h31 + h42],\n",
+       "[h13 + I*h24 + h31 - 1.0*I*h42, -1.0*I*h14 + h23 + h32 + I*h41,  h11 - 1.0*h22 + h33 - 1.0*h44,  I*h12 - 1.0*I*h21 + h34 + h43],\n",
+       "[h14 + I*h23 - 1.0*I*h32 + h41,  I*h13 + h24 - 1.0*I*h31 + h42, -1.0*I*h12 + I*h21 + h34 + h43,  h11 - 1.0*h22 - 1.0*h33 + h44]])"
       ]
      },
      "execution_count": 6,
@@ -633,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   },
   "name": "Calculations.ipynb"
  },
